--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+.slick-slide > div {
+    margin: 0 10px;
+}
